backend/k8s/alpha/ingress.template.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vethelp-public
  namespace: vethelp-alpha
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/limit-rps: "20"
    nginx.ingress.kubernetes.io/proxy-body-size: "1m"
spec:
  tls:
    - hosts: [__PUBLIC_HOST__]
      secretName: vethelp-alpha-tls
  rules:
    - host: __PUBLIC_HOST__
      http:
        paths:
          - path: /v1/
            pathType: Prefix
            backend:
              service:
                name: vethelp-backend
                port:
                  name: http
